Adapted JSON BookQueryTest (but improvements are needed)