@@ -9,13 +9,13 @@
   <version>0.1.0-SNAPSHOT</version>
 
   <name>tryjava</name>
-  <description>Trying out Java 21, JDK APIs, functional programming, immutable collections etc.</description>
+  <description>Trying out Java 22, JDK APIs, functional programming, immutable collections etc.</description>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.release>22</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -128,10 +128,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.11.0</version>
           <configuration>
-            <release>21</release>
-            <compilerArgs>
-              <compilerArg>--enable-preview</compilerArg>
-            </compilerArgs>
+            <release>22</release>
           </configuration>
         </plugin>
         <plugin>
